--- a/CS/AuthenticationOwin.Module.Web/AuthenticationOwin.Module.Web.csproj
+++ b/CS/AuthenticationOwin.Module.Web/AuthenticationOwin.Module.Web.csproj
@@ -144,7 +144,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml">
