--- a/CS/AuthenticationOwin.Module/AuthenticationOwin.Module.csproj
+++ b/CS/AuthenticationOwin.Module/AuthenticationOwin.Module.csproj
@@ -113,6 +113,7 @@
       <DependentUpon>Module.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\CustomAuthenticationStandardProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Model.DesignedDiffs.xafml" />
