--- a/CS/AuthenticationOwin.Web/packages.config
+++ b/CS/AuthenticationOwin.Web/packages.config
@@ -1,14 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.4.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net452" />
-  <package id="Microsoft.Owin" version="4.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Cors" version="4.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security" version="4.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.Cookies" version="4.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.Facebook" version="4.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.Google" version="4.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="4.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Cors" version="4.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Facebook" version="4.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Google" version="4.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
 </packages>
