--- a/CS/MySolution.Web/packages.config
+++ b/CS/MySolution.Web/packages.config
@@ -1,15 +1,91 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net452" />
-  <package id="Microsoft.Owin" version="4.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Cors" version="4.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security" version="4.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.Cookies" version="4.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net452" />
-  <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Azure.Core" version="1.25.0" targetFramework="net472" />
+  <package id="Azure.Identity" version="1.7.0" targetFramework="net472" />
+  <package id="Azure.Security.KeyVault.Certificates" version="4.4.0" targetFramework="net472" />
+  <package id="Azure.Security.KeyVault.Secrets" version="4.4.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="6.0.10" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.DataProtection" version="6.0.10" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="6.0.10" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0-rc.2.22472.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="6.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="6.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.CommandLine" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="6.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.UserSecrets" version="6.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Hosting" version="6.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Console" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Debug" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.EventLog" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.EventSource" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.47.2" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.24.0" targetFramework="net472" />
+  <package id="Microsoft.Identity.Web" version="1.25.3" targetFramework="net472" />
+  <package id="Microsoft.Identity.Web.Certificate" version="1.25.3" targetFramework="net472" />
+  <package id="Microsoft.Identity.Web.Certificateless" version="1.25.3" targetFramework="net472" />
+  <package id="Microsoft.Identity.Web.TokenCache" version="1.25.3" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.24.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.24.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.24.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.LoggingExtensions" version="6.24.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.24.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.24.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.24.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Validators" version="6.24.0" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Cors" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.2-beta2" targetFramework="net472" />
+  <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.24.0" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Memory.Data" version="6.0.0" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="7.0.0-preview.2.22152.2" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.ProtectedData" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Xml" version="6.0.1" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="7.0.0-rc.2.22472.3" targetFramework="net472" />
+  <package id="System.Text.Json" version="7.0.0-rc.2.22472.3" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
