fix property name

--- a/MySolution.Web/Web.config
+++ b/MySolution.Web/Web.config
@@ -29,11 +29,11 @@
     <add key="Modules" value="" />
     <add key="ErrorReportEmail" value="" />
     <add key="ErrorReportEmailServer" value="" />
-    <add key="MicrosoftClientID" value="YourMicrosoftClientID" />
-    <add key="ida:AADInstance" value="https://login.microsoftonline.com/" />
-    <add key="ida:Domain" value="YourDomain" />
-    <add key="ida:TenantId" value="YourTenantId" />
-    <add key="ida:PostLogoutRedirectUri" value="https://localhost:44300/" />
+    
+	  <add key="ClientId" value="Enter_the_Application_Id_here" />
+	  <add key="redirectUri" value="https://localhost:44300/"/>
+	  <add key="Tenant" value="common" />
+	  <add key="Authority" value="https://login.microsoftonline.com/{0}/v2.0" />
     <!--
     <add key="ErrorReportEmailSubject" value="{0:ExceptionMessage}"/>
     <add key="ErrorReportEmailFrom" value="null@nospam.com"/>
